--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -88,7 +88,14 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
 
  basic_heavy_tank_chassis_short:0 "1938年型重戦車"
  basic_medium_tank_chassis_short:0 "1936年型中戦車"
- tank_medium_cannon_3:0 "発展型中口径砲"
+ tank_small_cannon:0 "基本型小口径砲"
+ tank_high_velocity_cannon:0 "高初速小口径砲"
+ tank_medium_cannon:0 "基本型中口径砲"
+ tank_high_velocity_cannon_2:0 "高初速中口径砲"
+ tank_medium_cannon_3:0 "軽量型中口径砲"
+ tank_high_velocity_cannon_3:0 "高初速大口径砲"
+ tank_heavy_cannon_3:0 "軽量型大口径砲"
+ tank_medium_cannon_3_desc:0 "圧倒的な装甲を持つ新型の敵戦車に我が軍の開発部はすぐさま対応し、これまでの火砲から更に発達した火力と初速を誇る戦車砲を生み出した。この主砲は新鋭軽戦車クラスの主武装とされる予定である。"
  tank_medium_cannon_3_desc:0 "圧倒的な装甲を持つ新型の敵戦車に我が軍の開発部はすぐさま対応し、これまでの火砲から更に発達した火力と初速を誇る戦車砲を生み出した。この主砲は新鋭中戦車クラスの主武装とされる予定である。"
  
  IB_tank_heavy_machine_gun:0 "車長用機関銃"
