--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -54,6 +54,15 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  infantry_at3:0 "歩兵用対戦車装備 III"
  infantry_at3_desc:0 "改良を加えられた新型の歩兵用対戦車装備は、兵士として未熟な者でも容易に取り扱う事ができ、主力級中戦車の正面装甲を破壊する事も可能であるとされている。"
 
+ #火炎放射戦車大隊
+ tank_designer_flame:0 "火炎放射"
+ light_flame_tank:0 "軽火炎放射戦車支援大隊"
+ light_flame_tank_desc:0 "火炎放射器を装備した軽戦車大隊で、都市や要塞への攻撃を支援する。"
+ medium_flame_tank:0 "中火炎放射戦車支援大隊"
+ medium_flame_tank_desc:0 "火炎放射器を装備した中戦車大隊で、都市や要塞への攻撃を支援する。"
+ heavy_flame_tank:0 "重火炎放射戦車支援大隊"
+ heavy_flame_tank_desc:0 "火炎放射器を装備した重戦車大隊で、都市や要塞への攻撃を支援する。"
+
  #tank_modules
  suspension_tech_1:0 "ボギー式サスペンション"
  suspension_tech_1_desc:0 "転輪が個別に取り付けられているため、破損しても簡単に交換が可能な、簡易で安価なサスペンション。"
