--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -117,10 +117,12 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  tank_heavy_cannon:0 "基本型大口径砲"
  tank_heavy_cannon_2:0 "改良型大口径砲"
  tank_heavy_cannon_3:0 "軽量型大口径砲"
- tank_super_heavy_cannon:0 "超大口径砲"
+ tank_super_heavy_cannon:0 "基本型超大口径砲"
+ tank_super_heavy_cannon_2:0 "改良型超大口径砲"
  tank_medium_cannon_3_desc:0 "圧倒的な装甲を持つ新型の敵戦車に我が軍の開発部はすぐさま対応し、これまでの火砲から更に発達した火力と初速を誇る戦車砲を生み出した。この主砲は新鋭軽戦車クラスの主武装とされる予定である。"
  tank_heavy_cannon_3_desc:0 "圧倒的な装甲を持つ新型の敵戦車に我が軍の開発部はすぐさま対応し、これまでの火砲から更に発達した火力と初速を誇る戦車砲を生み出した。この主砲は新鋭中戦車クラスの主武装とされる予定である。"
- 
+ tank_super_heavy_cannon_2_desc:0 "圧倒的な装甲を持つ新型の敵戦車に我が軍の開発部はすぐさま対応し、これまでの火砲から更に発達した火力と初速を誇る戦車砲を生み出した。この主砲は新鋭現代戦車クラスの主武装とされる予定である。"
+
  IB_tank_heavy_machine_gun:0 "車長用機関銃"
  IB_tank_heavy_machine_gun_desc:0 "小型戦車の基本的な武装として砲塔上部に搭載し、主に対人戦での運用を想定した兵器だが、その効力は限定的である。"
  IB_tank_heavy_machine_gun_2:0 "車長用改良型機関銃"
