--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -147,6 +147,69 @@ ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
  IB_three_man_turret_tt:0 "戦車モジュール解禁：§O3人用砲塔§!"
  IB_fixed_ss_turret_tt:0 "戦車モジュール解禁：§C各種固定砲塔§!"
 
+ ### EQUIPMENT MODULES ###
+ heavy_tank_gasoline_engine: "重戦車用ガソリンエンジン"
+ heavy_tank_gasoline_engine_desc: "ガソリンエンジンは、所定のエンジンサイズであれば速度は速くなるが、燃料が原因で火災の発生率が高くなる。"
+ heavy_tank_diesel_engine: "重戦車用ディーゼルエンジン"
+ heavy_tank_diesel_engine_desc: "ディーゼルエンジンは、ガソリンエンジンよりも信頼性が高いが、同じエンジンサイズであれば速度は低下する。"
+ heavy_tank_petrol_electric_engine: "重戦車用ガス・エレクトリックエンジン"
+ heavy_tank_petrol_electric_engine_desc: "ガソリンエンジンに電気モーターを組み合わせて使用する。複雑で高価、信頼性に欠けるが、戦術移動では比類なき性能を発揮する。"
+ heavy_tank_gas_turbine_engine: "重戦車用ガスタービン"
+ heavy_tank_gas_turbine_engine_desc: "ジェットエンジンから発展したタービンエンジン。燃料消費量は多くなるが、一定のエンジンサイズの中では最高の速度を誇る。"
+
+ tank_light_one_man_tank_turret_Cmg: "同軸機関銃付き・一名用砲塔"
+ tank_light_one_man_tank_turret_Cmg_desc: "搭乗員一名が乗れる程度の小型砲塔で、主砲の照準や装填、目標や威力観測などを行う。"
+
+ tank_light_two_man_tank_turret_Cmg: "同軸機関銃付き・二名用砲塔"
+ tank_light_two_man_tank_turret_Cmg_desc: "搭乗員二名が兵装操作と状況観察を分担して行うことが可能な砲塔。しかし、これでは搭乗員の効率的分業は確実とはならない。"
+
+ tank_light_three_man_tank_turret_Cmg: "同軸機関銃付き・三名用砲塔"
+ tank_light_three_man_tank_turret_Cmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+ tank_light_three_man_tank_turret_Hmg: "車長用機関銃付き・三名用砲塔"
+ tank_light_three_man_tank_turret_Hmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+ tank_light_three_man_tank_turret_CHmg: "車長＆同軸機関銃付き・三名用砲塔"
+ tank_light_three_man_tank_turret_CHmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+
+ tank_medium_one_man_tank_turret_Cmg: "同軸機関銃付き・一名用砲塔"
+ tank_medium_one_man_tank_turret_Cmg_desc: "搭乗員一名が乗れる程度の小型砲塔で、主砲の照準や装填、目標や威力観測などを行う。"
+ tank_medium_two_man_tank_turret_Cmg: "同軸機関銃付き・二名用砲塔"
+ tank_medium_two_man_tank_turret_Cmg_desc: "搭乗員二名が兵装操作と状況観察を分担して行うことが可能な砲塔。しかし、これでは搭乗員の効率的分業は確実とはならない。"
+ tank_medium_three_man_tank_turret_Cmg: "同軸機関銃付き・三名用砲塔"
+ tank_medium_three_man_tank_turret_Cmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+ tank_medium_three_man_tank_turret_Hmg: "車長用機関銃付き・三名用砲塔"
+ tank_medium_three_man_tank_turret_Hmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+ tank_medium_three_man_tank_turret_CHmg: "車長＆同軸機関銃付き・三名用砲塔"
+ tank_medium_three_man_tank_turret_CHmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+
+ tank_heavy_two_man_tank_turret_Cmg: "同軸機関銃付き・二名用砲塔"
+ tank_heavy_two_man_tank_turret_Cmg_desc: "搭乗員二名が兵装操作と状況観察を分担して行うことが可能な砲塔。しかし、これでは搭乗員の効率的分業は確実とはならない。"
+ tank_heavy_three_man_tank_turret_Cmg: "同軸機関銃付き・三名用砲塔"
+ tank_heavy_three_man_tank_turret_Cmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+ tank_heavy_three_man_tank_turret_Hmg: "車長用機関銃付き・三名用砲塔"
+ tank_heavy_three_man_tank_turret_Hmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+ tank_heavy_three_man_tank_turret_CHmg: "車長＆同軸機関銃付き・三名用砲塔"
+ tank_heavy_three_man_tank_turret_CHmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+
+ tank_super_heavy_three_man_tank_turret_Cmg: "同軸機関銃付き・三名用砲塔"
+ tank_super_heavy_three_man_tank_turret_Cmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+ tank_super_heavy_three_man_tank_turret_Hmg: "車長用機関銃付き・三名用砲塔"
+ tank_super_heavy_three_man_tank_turret_Hmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+ tank_super_heavy_three_man_tank_turret_CHmg: "車長＆同軸機関銃付き・三名用砲塔"
+ tank_super_heavy_three_man_tank_turret_CHmg_desc: "搭乗員三名が、装填や照準・索敵などを分担して行うのに十分な広さの砲塔。"
+ tank_super_heavy_four_man_tank_turret_Cmg: "同軸機関銃付き・四名用砲塔"
+ tank_super_heavy_four_man_tank_turret_Cmg_desc: "主砲を搭載するために副装填装置用のスペースを追加した巨大な砲塔。"
+ tank_super_heavy_four_man_tank_turret_Hmg: "車長用機関銃付き・四名用砲塔"
+ tank_super_heavy_four_man_tank_turret_Hmg_desc: "主砲を搭載するために副装填装置用のスペースを追加した巨大な砲塔。"
+ tank_super_heavy_four_man_tank_turret_CHmg: "車長＆同軸機関銃付き・四名用砲塔"
+ tank_super_heavy_four_man_tank_turret_CHmg_desc: "主砲を搭載するために副装填装置用のスペースを追加した巨大な砲塔。"
+
+ tank_modern_tank_turret_Cmg: "同軸機関銃付き・現代型砲塔"
+ tank_modern_tank_turret_Cmg_desc: "搭乗員三名が効率的に主砲を操作し、周囲の状況を把握可能なように配置された砲塔。"
+ tank_modern_tank_turret_Hmg: "車長用機関銃付き・現代型砲塔"
+ tank_modern_tank_turret_Hmg_desc: "搭乗員三名が効率的に主砲を操作し、周囲の状況を把握可能なように配置された砲塔。"
+ tank_modern_tank_turret_CHmg: "車長＆同軸機関銃付き・現代型砲塔"
+ tank_modern_tank_turret_CHmg_desc: "搭乗員三名が効率的に主砲を操作し、周囲の状況を把握可能なように配置された砲塔。"
+
  delay_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n勝利できないときも、待ち伏せと時間稼は攻撃側の進行を遅らせるために有効だ。"
  mobile_infantry_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n一般的な歩兵は機甲部隊と行動をともにするにはあまりにも行軍が遅い。現代の戦場の展開速度についていくためには、自動車化もしくは機械化された歩兵が必要だ。\n\n"
  armored_spearhead_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n戦車の持つ潜在能力を最大限引き出すためには、戦車を歩兵の支援に縛り付けてはいけない。むしろ、戦車を中核とする、攻撃の先陣を切ることができる独立した快速部隊を編制すべきだ。\n\n"
