--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -469,6 +469,7 @@
  ENG_bertram_home_ramsay:0 "バートラム・ラムゼー"
 
 ##海軍艤装技術背景##
+ EQ_MOD_SLOT_fixed_ship_radar_slot_TITLE: "レーダー"
  EQ_MOD_SLOT_fixed_ship_sonar_slot_TITLE:0 "ソナー"
 
  4inGun:0 "4in小型砲"
