--- a/localisation/replace/innova_l_japanese.yml
+++ b/localisation/replace/innova_l_japanese.yml
@@ -308,6 +308,7 @@
 
  IB_three_man_turret_tt:0 "戦車モジュール解禁：§O3人用砲塔§!"
  IB_fixed_ss_turret_tt:0 "戦車モジュール解禁：§C各種固定砲塔§!"
+ IB_three_man_turret_mg_tt:0 "戦車モジュール解禁：§O車長用機関銃付き3人用砲塔§!"
 
 ## EQUIPMENT MODULES ##
  heavy_tank_gasoline_engine: "重戦車用ガソリンエンジン"
@@ -341,8 +342,8 @@
  mobile_infantry_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n一般的な歩兵は機甲部隊と行動をともにするにはあまりにも行軍が遅い。現代の戦場の展開速度についていくためには、自動車化もしくは機械化された歩兵が必要だ。\n\n"
  armored_spearhead_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n戦車の持つ潜在能力を最大限引き出すためには、戦車を歩兵の支援に縛り付けてはいけない。むしろ、戦車を中核とする、攻撃の先陣を切ることができる独立した快速部隊を編制すべきだ。\n\n"
 
- dispersed_support_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n支援部隊を分散させることでより広大な戦線に火力を行き渡らせ、結果として師団の防衛能力を高める。\n\n"
- intergrated_support_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n支援部隊と実戦部隊を統合することで、師団の攻撃を強力にする。\n\n"
+ dispersed_support_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔と車長用機関銃付き3人用砲塔§!が使用可能になります\n\n支援部隊を分散させることでより広大な戦線に火力を行き渡らせ、結果として師団の防衛能力を高める。\n\n"
+ intergrated_support_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔と車長用機関銃付き3人用砲塔§!が使用可能になります\n\n支援部隊と実戦部隊を統合することで、師団の攻撃を強力にする。\n\n"
  tactical_control_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n前線における諸兵科連合に慣れ親しんだ士官達は、今や全兵科の作戦を直接に統制することができる。"
  advanced_firebases_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n前進する軍を最大限補助するために、要塞化された陣地内において砲兵の位置を前線に肉薄させる。"
 
@@ -354,6 +355,8 @@
  large_front_offensive_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§C全ての固定砲塔§!が使用可能になります\n\n指揮、あるいは脅迫により、前線の複数箇所で人海戦術攻勢をしかけることで、敵が火力を一箇所に集中させることを困難にする。"
  breakthrough_priority_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n作戦密度を増幅させ、前線のあらゆる要求を突破の二の次にして戦力を集中させる。局所的敗北は決定的な打撃を打てるのであれば些細なものである。"
  guerilla_warfare_desc:0 "この§Hドクトリンをアンロック§!する事で、戦車モジュールの§O3人用砲塔§!が使用可能になります\n\n敵進我退　敵駐我撹　敵疲我打　敵退我追\n敵が進出したら退却せよ。敵が停止したら撹乱せよ。敵が疲弊したら攻撃せよ。敵が退却したら追撃せよ。"
+
+ advanced_infantry_weapons2_desc:0 "この§H技術をアンロック§!する事で、戦車モジュールの§O車長用機関銃付き3人用砲塔§!が使用可能になります\n\n歩兵用の個人用火器と分隊支援火器、それに兵士が必要とする種々の軍装品。さらに近代化され個人用自動火器と対戦車ロケットが供給される。支給数が限られていた武器が、安定供給されるようになった。"
 
 ##tank_modules_replace##
  additional_frontal_armor:0 "前面追加装甲"
