--- a/localisation/ib_se_l_japanese.yml
+++ b/localisation/ib_se_l_japanese.yml
@@ -1,9 +1,16 @@
 ﻿l_japanese:
  ib_se_category: "焦土作戦"
- ib_se_category_desc: "自国もしくは同盟国のステートが敵国と§Y隣接§!している場合、該当地域を§Y焦土化§!する事が可能となる。\nまた、一度押したディシジョンは再度の実行まで§Y30日間§!のクールタイムが存在している。"
+ ib_se_category_desc: "§Y自動焦土化は現在、[Root.Getib_se_autoName]§!\n\n自国もしくは同盟国のステートが敵国と§Y隣接§!している場合、該当地域を§Y焦土化§!する事が可能となる。\nまた、一度押したディシジョンは再度の実行まで§Y30日間§!のクールタイムが存在している。\nまた、焦土作戦は§Y自動化§!することが可能で、自国のステートが§R占領§!された時、焦土作戦実行条件を満たしている場合に§Y自動的§!に§Y焦土化§!が実行される。"
  #ib_se_category_desc: "自国もしくは同盟国のステートが敵国と§Y隣接§!している場合、該当地域を§Y焦土化§!する事が可能となる。\nただし、ディシジョン押下後でも爆破前に敵にステートが奪取された場合はキャンセルされる。\nまた、一度押したディシジョンは再度の実行まで§Y30日間§!のクールタイムが存在している。"
 
  ib_scorched_earth_state_flag: "該当ステートは焦土化済みである"
+
+ ib_se_auto_enable: "自動焦土化の有効化"
+ ib_se_auto_disable: "自動焦土化の無効化"
+ ib_se_auto_enable_flag: "自動焦土化が有効化されている"
+
+ Getib_se_auto_enableName: "§G有効§!"
+ Getib_se_auto_disableName: "§R無効§!"
 
  ib_scorched_earth_description: "焦土作戦の実行条件と効果"
  ib_scorched_earth: "[FROM.GetName]の焦土化"
