国家方針の翻訳修正、自由主義精神での自由貿易付与、レーダー画像修正

--- a/localisation/japanese/strategic_region_names_l_japanese.yml
+++ b/localisation/japanese/strategic_region_names_l_japanese.yml
@@ -37,7 +37,7 @@
  STRATEGICREGION_36: "グリーンランド"
  STRATEGICREGION_37: "バルト三国"
  STRATEGICREGION_38: "ポーランド中部"
- STRATEGICREGION_39: "ウクライナ東部"
+ STRATEGICREGION_39: "ウクライナ西部"
  STRATEGICREGION_40: "トランスヴォルガ"
  STRATEGICREGION_41: "スペイン南部"
  STRATEGICREGION_42: "ビスケー湾"
